Correcao de bugs de front e back end, parte 1

--- a/barber-shop-api/src/main/resources/application-dev.yml
+++ b/barber-shop-api/src/main/resources/application-dev.yml
@@ -6,6 +6,6 @@ spring:
         format_sql: true
   devtools:
     remote:
-      secret: 123
+      secret: "123"
     restart:
       trigger-file: trigger.txt
